--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?useSSL=false
+spring.datasource.username=sqluser
+spring.datasource.password=abc123
+
+# 起動時に勝手に作成させる
+spring.jpa.hibernate.ddl-auto=update
+
